updating auth and working on content
